k8s/security/mongo/mongo-egress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: mongo-egress
  namespace: database

spec:

  podSelector:

    matchLabels:

      app.kubernetes.io/instance: mongo

      app.kubernetes.io/name: mongodb

  policyTypes:

  - Egress

  egress:

  - to:

    - podSelector:

        matchLabels:

          app.kubernetes.io/instance: mongo

          app.kubernetes.io/name: mongodb

    ports:

    - protocol: TCP
      port: 27017
